--- a/index.html
+++ b/index.html
@@ -16,13 +16,48 @@
     <li>Милая</li>
     <li>Ласковая</li>
     <li>Заботливая</li>
+    <li>Приятная</li>
     <li>Красивая</li>
     <li>Верная</li>
     <li>Искренняя</li>
+    <li>Умная</li>
     <li>Гордая</li>
     <li>Добрая</li>
     <li>Трогательная</li>
+    <li>Нежная</li>
+    <li>Любвиобиьная</li>
+    <li>Разносторонняя</li>
+    <li>Непредсказуемая</li>
+    <li>Загадочная</li>
     <li>Лучшая</li>
+    <li>Чувствительная</li>
+    <li>Душевная</li>
+    <li>Сильная</li>
+    <li>Неповторимая</li>
   </ul>
+<p>Какой бы ты не была, я тебя люблю всегда </p>
+<p>Малыш, всегда напротяжении всей жизни будут плохие времена, плохие ситуации, плохие моменты 
+
+  У каждого человека в жизни такое наступает и это неизбежно
+  
+  Времена года... 
+  <p>Лето всегда сменяется на осень, как бы ты того не хотела, этот процесс неизбежен и он не подвластен тебе, потом наступает зима, слякоть, грязь, </p>
+  пасмурное затянутое небо, темень с самого утра и вечером снова
+  
+  Но потом, эти сезоны НЕИЗБЕЖНО сменяются на весну, на прекрасную пору, когда жизнь начинает просыпаться и везде вокруг всё зеленеет, становится красивее, воздух становится свежим и приятным, становится теплее, лучики солнца начинают приятно греть
+  
+  Так вот и в жизни все происходит абсолютно точно так же. НЕИЗБЕЖНО после плохого наступает хорошее и наоборот. Всегда всё будет взаимозаменяться
+  
+  Стоит принять тот факт, что плохие времена существуют и не нужно тонуть в них, погружаться полностью с головой
+  
+  Ты сможешь осилить все трудности, которые у тебя возникают на пути. Какие бы условия не были, ТЫ сможешь
+  
+  Если тебе понадобится помощь, я обязательно помогу тебе. Я отложу все свои дела. Я уйду из какой-то компании из какой-то тусы и помогу тебе. Хорошо?
+  
+  Просто услышь меня и держи в голове то, что я тебе написал выше.
+  
+  Держи свой носик выше, ты сильная девочка, я тебе это много раз повторял. Ты сильная духом. Ты сможешь всё преодолеть
+  
+  Я люблю тебя </p>
 </body>
 </html>
