--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
    <h1>Малышка</h1> 
    <a href="page2.html"> <img src="images/Frame 1 (26).png" alt="" width="200" height="200" /> </a>
-  <h2>Ниже ты увидешь пункты, адресующиеся тебе</h2>
+  <h2>Все что ниже, адресуется только тебе</h2>
   <h3>Я тебя <u>люблю</u> и сильно <u>обожаю</u></h3>
   <p>ТЫ:</p>
   <ul>
@@ -35,29 +35,28 @@
     <li>Сильная</li>
     <li>Неповторимая</li>
   </ul>
-<p>Какой бы ты не была, я тебя люблю всегда </p>
+<p>Это всё про тебя) Какой бы ты не была, я тебя люблю всегда </p>
 <p>Малыш, всегда напротяжении всей жизни будут плохие времена, плохие ситуации, плохие моменты 
 
   У каждого человека в жизни такое наступает и это неизбежно
   
-  Времена года... 
-  <p>Лето всегда сменяется на осень, как бы ты того не хотела, этот процесс неизбежен и он не подвластен тебе, потом наступает зима, слякоть, грязь, </p>
+  <p> Времена года... Лето всегда сменяется на осень, как бы ты того не хотела, этот процесс неизбежен и он не подвластен тебе, потом наступает зима, слякоть, грязь, 
   пасмурное затянутое небо, темень с самого утра и вечером снова
   
   Но потом, эти сезоны НЕИЗБЕЖНО сменяются на весну, на прекрасную пору, когда жизнь начинает просыпаться и везде вокруг всё зеленеет, становится красивее, воздух становится свежим и приятным, становится теплее, лучики солнца начинают приятно греть
   
-  Так вот и в жизни все происходит абсолютно точно так же. НЕИЗБЕЖНО после плохого наступает хорошее и наоборот. Всегда всё будет взаимозаменяться
+  <p> Так вот и в жизни все происходит абсолютно точно так же. НЕИЗБЕЖНО после плохого наступает хорошее и наоборот. Всегда всё будет взаимозаменяться </p>
   
-  Стоит принять тот факт, что плохие времена существуют и не нужно тонуть в них, погружаться полностью с головой
+ <p>  Стоит принять тот факт, что плохие времена существуют и не нужно тонуть в них, погружаться полностью с головой.
   
   Ты сможешь осилить все трудности, которые у тебя возникают на пути. Какие бы условия не были, ТЫ сможешь
   
-  Если тебе понадобится помощь, я обязательно помогу тебе. Я отложу все свои дела. Я уйду из какой-то компании из какой-то тусы и помогу тебе. Хорошо?
+  Если тебе понадобится помощь, я обязательно помогу тебе. Я отложу все свои дела. Я помогу тебе. </p>
   
-  Просто услышь меня и держи в голове то, что я тебе написал выше.
+  <p> Просто услышь меня и держи в голове то, что я тебе написал выше.
   
-  Держи свой носик выше, ты сильная девочка, я тебе это много раз повторял. Ты сильная духом. Ты сможешь всё преодолеть
+  Держи свой носик выше, ты сильная девочка, я тебе это много раз повторял. Ты сильная духом. Мы вместе сможем всё преодолеть </p>
   
-  Я люблю тебя </p>
+  <p> Я люблю тебя </p>
 </body>
 </html>
