--- a/page2.html
+++ b/page2.html
@@ -1,2 +1,6 @@
 <h3> Это самая красивая девочка с изумительной улыбкой и прекраными глазами</h3>
 <img src="images/photo_5296600038350376053_y.jpg" alt=""  width="300" height="200"  />
+<h3> Это она стоит и показывает солнышку своё блестящее личико</h3>
+<img src="images/photo_5460706512482716906_y.jpg" alt=""  width="150" height="250"  /> 
+<h3> А тут она на улице в красивом платье и её фоткает Тимур</h3>
+<img src="images/photo_5460706512482716907_y.jpg" width="200" height="250" />
