--- a/index.html
+++ b/index.html
@@ -36,26 +36,30 @@
     <li>Неповторимая</li>
   </ul>
 <p>Это всё про тебя) Какой бы ты не была, я тебя люблю всегда </p>
-<p>Малыш, всегда напротяжении всей жизни будут плохие времена, плохие ситуации, плохие моменты 
+<p>Малыш, всегда напротяжении всей жизни будут плохие времена, плохие ситуации, плохие моменты.
 
   У каждого человека в жизни такое наступает и это неизбежно
-  
-  <p> Времена года... Лето всегда сменяется на осень, как бы ты того не хотела, этот процесс неизбежен и он не подвластен тебе, потом наступает зима, слякоть, грязь, 
+</p>
+<p> Времена года... Лето всегда сменяется на осень, как бы ты того не хотела, этот процесс неизбежен и он не подвластен тебе, потом наступает зима, слякоть, грязь, 
   пасмурное затянутое небо, темень с самого утра и вечером снова
-  
+  </p>
   Но потом, эти сезоны НЕИЗБЕЖНО сменяются на весну, на прекрасную пору, когда жизнь начинает просыпаться и везде вокруг всё зеленеет, становится красивее, воздух становится свежим и приятным, становится теплее, лучики солнца начинают приятно греть
-  
-  <p> Так вот и в жизни все происходит абсолютно точно так же. НЕИЗБЕЖНО после плохого наступает хорошее и наоборот. Всегда всё будет взаимозаменяться </p>
+  </p>
+
+  <p> Так вот и в жизни все происходит абсолютно точно так же. НЕИЗБЕЖНО после плохого наступает хорошее и наоборот. Всегда всё будет взаимозаменяться 
+  </p>
   
  <p>  Стоит принять тот факт, что плохие времена существуют и не нужно тонуть в них, погружаться полностью с головой.
   
   Ты сможешь осилить все трудности, которые у тебя возникают на пути. Какие бы условия не были, ТЫ сможешь
   
-  Если тебе понадобится помощь, я обязательно помогу тебе. Я отложу все свои дела. Я помогу тебе. </p>
+  Если тебе понадобится помощь, я обязательно помогу тебе. Я отложу все свои дела. Я помогу тебе. 
+</p>
   
   <p> Просто услышь меня и держи в голове то, что я тебе написал выше.
   
-  Держи свой носик выше, ты сильная девочка, я тебе это много раз повторял. Ты сильная духом. Мы вместе сможем всё преодолеть </p>
+  Держи свой носик выше, ты сильная девочка, я тебе это много раз повторял. Ты сильная духом. Мы вместе сможем всё преодолеть 
+</p>
   
   <p> Я люблю тебя </p>
 </body>
